--- a/header.html
+++ b/header.html
@@ -1,8 +1,3 @@
-<head>
-    <link rel="stylesheet" href="assets/css/design.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-</head>
-
 <header>
     <div class="nav">
         <nav>
@@ -15,7 +10,7 @@
                 <li><a href="about.html" class="nav__link">About</a></li>
                 <li><a href="contact.html" class="nav__link">Contact</a></li>
                 <li class="avatar_field">
-                    <div id="user"><img src="assets/img/logo.png" alt="" class="avatar">Username</div>
+                    <a href="account.php" id="user"><img src="assets/img/user_ava.png" alt="" class="avatar">Username</a>
                     <ul>
                         <li class="nav__link settings"><i class="fa-regular fa-language header_icons"></i>&nbsp VI|EN</li>
                         <li class="nav__link settings"><i class="fa-solid fa-right-from-bracket header_icons"></i>&nbsp Logout</li>
@@ -27,18 +22,18 @@
             </label>
             <label for="nav_mobile__toggle_check" class="overlay"></label>
             <ul class="nav_mobile">
+                <li class="avatar_field">
+                    <a href="account.php" id="user"><img src="assets/img/user_ava.png" alt="" class="avatar">Username</a>
+                    <ul class="avatar_field__desc no_visible ">
+                        <li class="nav__link settings"><i class="fa-regular fa-language header_icons"></i>&nbsp VI|EN</li>
+                        <li class="nav__link settings"><i class="fa-solid fa-right-from-bracket header_icons"></i>&nbsp Logout</li>
+                    </ul>
+                </li>
                 <li><a href="" class="nav__link">Home</a></li>
                 <li><a href="" class="nav__link">About</a></li>
                 <li><a href="" class="nav__link">Contact</a></li>
                 <li><a href="" class="nav__link">VI|EN</a></li>
                 <li><a href="" class="nav__link">Log Out</a></li>
-                <li class="avatar_field">
-                    <div id="user"><img src="assets/img/logo.png" alt="" class="avatar">Username</div>
-                    <ul>
-                        <li class="nav__link settings"><i class="fa-regular fa-language header_icons"></i>&nbsp VI|EN</li>
-                        <li class="nav__link settings"><i class="fa-solid fa-right-from-bracket header_icons"></i>&nbsp Logout</li>
-                    </ul>
-                </li>
                 <label for="nav_mobile__toggle_check" class="close_button">
                     <i class="fa-solid fa-xmark"></i>
                 </label>
