--- a/header.html
+++ b/header.html
@@ -12,7 +12,7 @@
                 <li class="avatar_field">
                     <a href="account.php" id="user"><img src="assets/img/user_ava.png" alt="" class="avatar">Username</a>
                     <ul>
-                        <li class="nav__link settings"><i class="fa-regular fa-language header_icons"></i>&nbsp VI|EN</li>
+                        <li class="nav__link settings"><i class="fa-solid fa-globe header_icons"></i> &nbsp VI|EN</li>
                         <li class="nav__link settings"><i class="fa-solid fa-right-from-bracket header_icons"></i>&nbsp Logout</li>
                     </ul>
                 </li>
